salvando alterações (index.html)

--- a/main.css
+++ b/main.css
@@ -5,25 +5,35 @@
     font-family: roboto, sans-serif;
 }
 
-form {
+body {
     background-color: #f0eef3;
-    padding: 280px 0;
-    color: #090909;
-    display: flex;
-    border-style:  16px solid #070707;
     justify-content: center;
-    text-transform:none;
-    font-style: normal;
-    text-align:justify;
 }
 
-form input, button{
-    padding-bottom: 16 0;
+form h1 {
+    background-color: #f0eef3;
+    padding-top: 180px;
     justify-content:center;
     text-transform:none;
     font-style: normal;
-    text-align:justify;
-    display:list-item;
+    text-align:center;
+}
+
+form {
+    justify-content:center;
+    text-transform:center;
+    font-style:normal;
+    text-align:center;
+}
+
+input, button {
+    justify-content: center;
+    margin-left: 2px;
+    margin-top: 20px;
+    padding:  10px ;
+    text-align: center;
+    text-transform: center;
+    
 }
 
 button{
@@ -33,4 +43,5 @@ button{
 ul li {
     text-decoration: line-through;
     flex-wrap: wrap;
+    text-align: center;
 }
