--- a/main.css
+++ b/main.css
@@ -3,6 +3,23 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'roboto', sans-serif;
+
+}
+
+h1 {
+    
+    background-color: #f0eef3;
+    padding: 50px;
+    padding-block: 50px;
+    justify: content 50px;
+    font-style: normal;
+    text-align:none;
+}
+
+.container {
+    max-width: 100%;
+    width: 100%;
+    margin:0;
 }
 
 .form-campo {
@@ -10,22 +27,33 @@
 }
 
 .form-campo label {
-font-weight:bold;
-display: block;
+    padding-top: 16px;
+    font-weight:bold;
+    display: block;
+    justify-content:none;
 }
 
 .form-campo input, 
-.form-campo textarea {
+.form-campo CEP {
     width: 100%;
     display: block;
     padding: 8px;
 }
 
-.form-campo textarea {
-resize: none;
-height: 120px;
-}
-
 form {
     max-width: 360px;
+}
+
+button {
+    display: block;
+    width: 100%;
+    padding: 8px 0;
+    border: none;
+    background-color: #119759;
+    color: #fff;
+    font-size: 16px;
+    font-style: italic;
+    cursor: pointer;
+    border-radius: 6px;
+    max-width: 120px;
 }
